force-app/main/default/objects/walnut__Demo_Data__c/walnut__Demo_Data__c.object-meta.xml
<CustomObject>
    <label>Walnut demo activity</label>
    <nameField>
        <label>Demo name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Walnut demo activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>