force-app/main/default/objects/walnut__Demo_Data__c/fields/walnut__Demo_ID2__c.field-meta.xml
<CustomField>
    <fullName>walnut__Demo_ID2__c</fullName>
    <externalId>true</externalId>
    <label>Demo ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>