force-app/main/default/objects/walnut__Demo_Data__c/fields/walnut__Storyline_ID__c.field-meta.xml
<CustomField>
    <fullName>walnut__Storyline_ID__c</fullName>
    <label>Template ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>