force-app/main/default/objects/walnut__Demo_Data__c/fields/walnut__Storyline_name__c.field-meta.xml
<CustomField>
    <fullName>walnut__Storyline_name__c</fullName>
    <label>Template name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>